# adore_if_carla

./: Makefile  adore_if_carla.mk  docker-compose.yaml
adore_if_carla/: CMakeLists.txt  package.xml
adore_if_carla/include/adore_if_carla/: plot_trafficlighttriggervolumes.h
adore_if_carla/src/: plot_trafficlighttriggervolumes.cpp  trafficlights2adore.cpp  trafficlightsConnections copy.txt  trafficlightsConnections.txt
docker/: Dockerfile.adore_if_carla
files/: requirements.adore_if_carla.build.ubuntu20.04.system
launchfiles/: demo014_adore_if_carla_part.launch  plot_tl_from_bag.launch
